// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots InfiniteList basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1 MuiGrid-spacing-xs-24-24"
    >
      <div
        className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
      >
        <div
          className="MuiList-root-92 MuiList-padding-93"
        >
          <div
            className={undefined}
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid ReactVirtualized__List"
              id={undefined}
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 400,
                  "overflowX": "hidden",
                  "overflowY": "auto",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-96 MuiGrid-spacing-xs-24-119"
    >
      <div
        className="MuiDrawer-docked-187"
      >
        <div
          className="MuiPaper-root-198 MuiPaper-elevation0-200 MuiDrawer-paper-188 MuiDrawer-paperAnchorLeft-189 MuiDrawer-paperAnchorDockedLeft-193"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-235 MuiList-padding-236 SideMenu-root-226 Component-flexed-225"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-227"
            />
            <div
              className="MuiButtonBase-root-249 MuiListItem-root-239 MuiListItem-default-242 MuiListItem-gutters-246 SideMenu-listItemGutters-229 MuiListItem-button-247 SideMenu-listItem-228"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-253 MuiListItemIcon-root-252"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-259 SideMenu-listItemText-231"
              >
                <span
                  className="MuiTypography-root-265 MuiTypography-subheading-272 MuiListItemText-primary-262 SideMenu-listItemPrimary-230"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-289"
              />
            </div>
            <div
              className="MuiButtonBase-root-249 MuiListItem-root-239 MuiListItem-default-242 MuiListItem-gutters-246 SideMenu-listItemGutters-229 MuiListItem-button-247 SideMenu-listItem-228"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-253 MuiListItemIcon-root-252"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-259 SideMenu-listItemText-231"
              >
                <span
                  className="MuiTypography-root-265 MuiTypography-subheading-272 MuiListItemText-primary-262 SideMenu-listItemPrimary-230"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-289"
              />
            </div>
            <div
              className="MuiButtonBase-root-249 MuiListItem-root-239 MuiListItem-default-242 MuiListItem-gutters-246 SideMenu-listItemGutters-229 MuiListItem-button-247 SideMenu-listItem-228"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-253 MuiListItemIcon-root-252"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-259 SideMenu-listItemText-231"
              >
                <span
                  className="MuiTypography-root-265 MuiTypography-subheading-272 MuiListItemText-primary-262 SideMenu-listItemPrimary-230"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-253"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-289"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu mini selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-504 MuiGrid-spacing-xs-24-527"
    >
      <div
        className="MuiDrawer-docked-595"
      >
        <div
          className="MuiPaper-root-606 MuiPaper-elevation0-608 MuiDrawer-paper-596 MuiDrawer-paperAnchorLeft-597 MuiDrawer-paperAnchorDockedLeft-601"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-643 MuiList-padding-644 SideMenu-root-634 Component-flexed-633"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 80,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-635"
            />
            <div
              className="MuiButtonBase-root-657 MuiListItem-root-647 MuiListItem-default-650 MuiListItem-gutters-654 SideMenu-listItemGutters-637 MuiListItem-button-655 SideMenu-activeItem-642"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-661 MuiListItemIcon-root-660"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-667 SideMenu-listItemText-639 SideMenu-listItemHidden-640"
              >
                <span
                  className="MuiTypography-root-673 MuiTypography-subheading-680 MuiListItemText-primary-670 SideMenu-listItemPrimary-638"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-697"
              />
            </div>
            <div
              className="MuiButtonBase-root-657 MuiListItem-root-647 MuiListItem-default-650 MuiListItem-gutters-654 SideMenu-listItemGutters-637 MuiListItem-button-655 SideMenu-listItem-636"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-661 MuiListItemIcon-root-660"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-667 SideMenu-listItemText-639 SideMenu-listItemHidden-640"
              >
                <span
                  className="MuiTypography-root-673 MuiTypography-subheading-680 MuiListItemText-primary-670 SideMenu-listItemPrimary-638"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-697"
              />
            </div>
            <div
              className="MuiButtonBase-root-657 MuiListItem-root-647 MuiListItem-default-650 MuiListItem-gutters-654 SideMenu-listItemGutters-637 MuiListItem-button-655 SideMenu-listItem-636"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-661 MuiListItemIcon-root-660"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-667 SideMenu-listItemText-639 SideMenu-listItemHidden-640"
              >
                <span
                  className="MuiTypography-root-673 MuiTypography-subheading-680 MuiListItemText-primary-670 SideMenu-listItemPrimary-638"
                >
                  Theme
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-697"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/SideMenu selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-300 MuiGrid-spacing-xs-24-323"
    >
      <div
        className="MuiDrawer-docked-391"
      >
        <div
          className="MuiPaper-root-402 MuiPaper-elevation0-404 MuiDrawer-paper-392 MuiDrawer-paperAnchorLeft-393 MuiDrawer-paperAnchorDockedLeft-397"
          direction="right"
          style={Object {}}
        >
          <nav
            className="MuiList-root-439 MuiList-padding-440 SideMenu-root-430 Component-flexed-429"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "width": 250,
              }
            }
          >
            <div
              className="SideMenu-topSpacer-431"
            />
            <div
              className="MuiButtonBase-root-453 MuiListItem-root-443 MuiListItem-default-446 MuiListItem-gutters-450 SideMenu-listItemGutters-433 MuiListItem-button-451 SideMenu-activeItem-438"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-457 MuiListItemIcon-root-456"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-463 SideMenu-listItemText-435"
              >
                <span
                  className="MuiTypography-root-469 MuiTypography-subheading-476 MuiListItemText-primary-466 SideMenu-listItemPrimary-434"
                >
                  Dashboard
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-493"
              />
            </div>
            <div
              className="MuiButtonBase-root-453 MuiListItem-root-443 MuiListItem-default-446 MuiListItem-gutters-450 SideMenu-listItemGutters-433 MuiListItem-button-451 SideMenu-listItem-432"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-457 MuiListItemIcon-root-456"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-463 SideMenu-listItemText-435"
              >
                <span
                  className="MuiTypography-root-469 MuiTypography-subheading-476 MuiListItemText-primary-466 SideMenu-listItemPrimary-434"
                >
                  Employees
                </span>
              </div>
              <span
                className="MuiTouchRipple-root-493"
              />
            </div>
            <div
              className="MuiButtonBase-root-453 MuiListItem-root-443 MuiListItem-default-446 MuiListItem-gutters-450 SideMenu-listItemGutters-433 MuiListItem-button-451 SideMenu-listItem-432"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              role="button"
              tabIndex="0"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-457 MuiListItemIcon-root-456"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"
                  />
                </g>
              </svg>
              <div
                className="MuiListItemText-root-463 SideMenu-listItemText-435"
              >
                <span
                  className="MuiTypography-root-469 MuiTypography-subheading-476 MuiListItemText-primary-466 SideMenu-listItemPrimary-434"
                >
                  Theme
                </span>
              </div>
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-457"
                color={undefined}
                focusable="false"
                style={
                  Object {
                    "color": "#fff",
                    "margin": "0",
                  }
                }
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </g>
              </svg>
              <span
                className="MuiTouchRipple-root-493"
              />
            </div>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1151 MuiGrid-spacing-xs-24-1174"
    >
      <div
        className="MuiGrid-item-1152 MuiGrid-grid-xs-12-1189"
      >
        <div
          className="MuiPaper-root-1247 MuiPaper-elevation2-1251 MuiPaper-rounded-1248 Widget-root-1242"
        >
          <h2
            className="MuiTypography-root-1274 MuiTypography-title-1280 MuiTypography-colorInherit-1293 MuiTypography-gutterBottom-1291"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1298 MuiGrid-spacing-xs-24-1321"
    >
      <div
        className="MuiGrid-item-1299 MuiGrid-grid-xs-12-1336"
      >
        <div
          className="MuiPaper-root-1394 MuiPaper-elevation2-1398 MuiPaper-rounded-1395 Widget-root-1389 Widget-featured-1393"
        >
          <h2
            className="MuiTypography-root-1421 MuiTypography-title-1427 MuiTypography-colorInherit-1440 MuiTypography-gutterBottom-1438"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget (dark theme) with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1445 MuiGrid-spacing-xs-24-1468"
    >
      <div
        className="MuiGrid-item-1446 MuiGrid-grid-xs-12-1483"
      >
        <div
          className="MuiGrid-container-1445 MuiGrid-spacing-xs-24-1468"
        >
          <div
            className="MuiGrid-item-1446 MuiGrid-grid-xs-6-1477"
          >
            <div
              className="MuiPaper-root-1543 MuiPaper-elevation2-1547 MuiPaper-rounded-1544 Widget-root-1538 Widget-border-1539 Widget-border-top-1540"
            >
              <h2
                className="MuiTypography-root-1570 MuiTypography-title-1576 MuiTypography-colorInherit-1589 MuiTypography-gutterBottom-1587"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1446 MuiGrid-grid-xs-6-1477"
          >
            <div
              className="MuiPaper-root-1543 MuiPaper-elevation2-1547 MuiPaper-rounded-1544 Widget-root-1538 Widget-border-1539 Widget-border-bottom-1541"
            >
              <h2
                className="MuiTypography-root-1570 MuiTypography-title-1576 MuiTypography-colorInherit-1589 MuiTypography-gutterBottom-1587"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1446 MuiGrid-grid-xs-6-1477"
          >
            <div
              className="MuiPaper-root-1543 MuiPaper-elevation2-1547 MuiPaper-rounded-1544 Widget-root-1538 Widget-border-1539 Component-customTopBorder-1536 Widget-border-top-1540"
            >
              <h2
                className="MuiTypography-root-1570 MuiTypography-title-1576 MuiTypography-colorInherit-1589 MuiTypography-gutterBottom-1587"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1446 MuiGrid-grid-xs-6-1477"
          >
            <div
              className="MuiPaper-root-1543 MuiPaper-elevation2-1547 MuiPaper-rounded-1544 Widget-root-1538 Widget-border-1539 Component-customBotomBorder-1537 Widget-border-bottom-1541"
            >
              <h2
                className="MuiTypography-root-1570 MuiTypography-title-1576 MuiTypography-colorInherit-1589 MuiTypography-gutterBottom-1587"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-708 MuiGrid-spacing-xs-24-731"
    >
      <div
        className="MuiGrid-item-709 MuiGrid-grid-xs-12-746"
      >
        <div
          className="MuiPaper-root-804 MuiPaper-elevation2-808 MuiPaper-rounded-805 Widget-root-799"
        >
          <h2
            className="MuiTypography-root-831 MuiTypography-title-837 MuiTypography-colorInherit-850 MuiTypography-gutterBottom-848"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget featured 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-855 MuiGrid-spacing-xs-24-878"
    >
      <div
        className="MuiGrid-item-856 MuiGrid-grid-xs-12-893"
      >
        <div
          className="MuiPaper-root-951 MuiPaper-elevation2-955 MuiPaper-rounded-952 Widget-root-946 Widget-featured-950"
        >
          <h2
            className="MuiTypography-root-978 MuiTypography-title-984 MuiTypography-colorInherit-997 MuiTypography-gutterBottom-995"
          >
            Title
          </h2>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots widgets/Widget with borders 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": 12,
      "width": "100vw",
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      className="MuiGrid-container-1002 MuiGrid-spacing-xs-24-1025"
    >
      <div
        className="MuiGrid-item-1003 MuiGrid-grid-xs-12-1040"
      >
        <div
          className="MuiGrid-container-1002 MuiGrid-spacing-xs-24-1025"
        >
          <div
            className="MuiGrid-item-1003 MuiGrid-grid-xs-6-1034"
          >
            <div
              className="MuiPaper-root-1100 MuiPaper-elevation2-1104 MuiPaper-rounded-1101 Widget-root-1095 Widget-border-1096 Widget-border-top-1097"
            >
              <h2
                className="MuiTypography-root-1127 MuiTypography-title-1133 MuiTypography-colorInherit-1146 MuiTypography-gutterBottom-1144"
              >
                Border top
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1003 MuiGrid-grid-xs-6-1034"
          >
            <div
              className="MuiPaper-root-1100 MuiPaper-elevation2-1104 MuiPaper-rounded-1101 Widget-root-1095 Widget-border-1096 Widget-border-bottom-1098"
            >
              <h2
                className="MuiTypography-root-1127 MuiTypography-title-1133 MuiTypography-colorInherit-1146 MuiTypography-gutterBottom-1144"
              >
                Border bottom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1003 MuiGrid-grid-xs-6-1034"
          >
            <div
              className="MuiPaper-root-1100 MuiPaper-elevation2-1104 MuiPaper-rounded-1101 Widget-root-1095 Widget-border-1096 Component-customTopBorder-1093 Widget-border-top-1097"
            >
              <h2
                className="MuiTypography-root-1127 MuiTypography-title-1133 MuiTypography-colorInherit-1146 MuiTypography-gutterBottom-1144"
              >
                Border top custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
          <div
            className="MuiGrid-item-1003 MuiGrid-grid-xs-6-1034"
          >
            <div
              className="MuiPaper-root-1100 MuiPaper-elevation2-1104 MuiPaper-rounded-1101 Widget-root-1095 Widget-border-1096 Component-customBotomBorder-1094 Widget-border-bottom-1098"
            >
              <h2
                className="MuiTypography-root-1127 MuiTypography-title-1133 MuiTypography-colorInherit-1146 MuiTypography-gutterBottom-1144"
              >
                Border bottom custom
              </h2>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis enim lobortis scelerisque fermentum. A pellentesque sit amet porttitor eget. Aenean sed adipiscing diam donec adipiscing tristique risus.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
